--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.6.0",
-    "morgan": "~1.9.0",
-    "multer": "^1.4.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "uuid": "^3.3.2"
   }
 }
